--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nerds - responsive mockup</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-    <!-- temporary -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/main.css">   
 </head>
 <body>
 //= template/header.html
-
-
-<!-- //= template/footer.html -->
+//= template/products.html
 
 <script type="text/javascript" src="js/main.js"></script>
 </body>
