products section finished

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
 <body>
 //= template/header.html
 //= template/products.html
+//= template/about.html
+//= template/brands.html
 
 <script type="text/javascript" src="js/main.js"></script>
 </body>
