section brands added

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 //= template/products.html
 //= template/about.html
 //= template/brands.html
+//= template/shop.html
 
 <script type="text/javascript" src="js/main.js"></script>
 </body>
