--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nerds - responsive mockup</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">   
+    <link rel="stylesheet" type="text/css" href="css/main.css"> 
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>  
 </head>
 <body>
 //= template/header.html
@@ -12,6 +13,8 @@
 //= template/about.html
 //= template/brands.html
 //= template/shop.html
+//= template/map.html
+//= template/footer.html
 
 <script type="text/javascript" src="js/main.js"></script>
 </body>
