slideout development started

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,25 @@
     <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyAbCND0EO4qqPN9-Mwvw3D-4dbzLFXqfPw"></script>   -->
 </head>
 <body>
+
+<nav id="menu">
+  <header>
+    <h2>Menu</h2>
+  </header>
+</nav>
+
+<div id="panel">
+<div class="mobile-nav visible-xs-block">
+	<div class="container">			
+		<div class="burger-menu">
+			<div class="burger-menu-stick1"></div>
+			<div class="burger-menu-stick2"></div>
+			<div class="burger-menu-stick3"></div>
+		</div>
+		<span class="logo"><span>NЁRDS</span> Design Studio</span>
+	</div>
+</div>
+	
 //= template/header.html
 //= template/products.html
 //= template/about.html
@@ -15,6 +34,13 @@
 //= template/shop.html
 //= template/map.html
 //= template/footer.html
+</div>
+
+
+
+<!-- </div> -->
+
+
 
 <script type="text/javascript" src="js/main.js"></script>
 </body>
