--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-<nav id="menu">
+<nav id="layout-slideout">
   <header>
     <h2>Menu</h2>
   </header>
 </nav>
 
-<div id="panel">
+
 <div class="mobile-nav visible-xs-block">
 	<div class="container">			
 		<div class="burger-menu">
@@ -26,7 +26,9 @@
 		<span class="logo"><span>NЁRDS</span> Design Studio</span>
 	</div>
 </div>
-	
+
+
+<div id="layout-wrapper">	
 //= template/header.html
 //= template/products.html
 //= template/about.html
