data-sideout-ignore added

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nerds - responsive mockup</title>
     <link rel="stylesheet" type="text/css" href="css/main.css"> 
-    <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyAbCND0EO4qqPN9-Mwvw3D-4dbzLFXqfPw"></script>   -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyAbCND0EO4qqPN9-Mwvw3D-4dbzLFXqfPw"></script>  
 </head>
 <body>
 
