git push and go home )

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,24 @@
 
 <nav id="layout-slideout">
   <header>
-    <h2>Menu</h2>
+    <img src="img/logo-top.png" alt="логотип" class="center-block">
+    <ul class="layout-slideout-menu">
+		<li class="layout-slideout-menu-item">
+			<a href="#"><span>Студия</span></a>
+		</li>
+		<li class="layout-slideout-menu-item">
+			<a href="#"><span>Клиенты</span></a>
+		</li>
+		<li class="layout-slideout-menu-item">
+			<a href="#"><span>Магазин</span></a>
+		</li>
+		<li class="layout-slideout-menu-item">
+			<a href="#"><span>Контакты</span></a>
+		</li>
+		<li class="layout-slideout-menu-item">
+			<a class="icon-basket" href="#"><span>Корзина</span></a>
+		</li>
+	</ul>
   </header>
 </nav>
 
